fixed spacing of LEGEND in loginbox, added basic user search

--- a/public/authboxes/loginbox.css
+++ b/public/authboxes/loginbox.css
@@ -10,7 +10,7 @@
 }
 
 .loginbox-partial legend {
-	margin-bottom: 8px;
+	margin-bottom: 0px;
 }
 
 .loginbox-partial .input-label {
